--- a/Src/Space/Components/CreditsView.razor
+++ b/Src/Space/Components/CreditsView.razor
@@ -1,6 +1,4 @@
-﻿<span class="unit">
-    C
-</span>
+﻿<span class="unit">C</span>
 <span class="value @(this.Credits < 0 ? "negative" : string.Empty)">
     @this.Credits.ToString("n0")
 </span>
@@ -16,7 +14,7 @@
     }
 
     .value.negative {
-        color: red;
+            color: red;
     }
 </style>
 
