--- a/Src/Space/Pages/Index.razor
+++ b/Src/Space/Pages/Index.razor
@@ -11,7 +11,7 @@
 <PageTitle>Space</PageTitle>
 
 <div style="display:flex; flex-direction:column; gap:1em; padding:1em;">
-    <div style="display:flex; justify-content:space-between;">
+    <div style="display:flex; justify-content:space-between; position:sticky; top:0; background:linear-gradient(0deg, rgba(18,18,18,0.8141631652661064) 0%, rgba(18,18,18,1) 14%, rgba(25,34,45,1) 100%);">
         <h1>SPACE</h1>
         <AccountComponent />
     </div>
